tests/integration/fail/comparison_geq_string_string.ncl
# test = 'error' 
#
# [metadata]
# error = 'EvalError::NAryPrimopTypeError'
"a" >= "b"